# cashlytics

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.github/: CODEOWNERS
backend/: .dockerignore  Dockerfile  app.py  auth.py  auth_bootstrap.py  lambda_function.py  models.py  pyproject.toml  reminder_lambda_function.py  requirements.txt
backend/database/: bootstrap.py  models.py  repository.py
backend/src/: main.py
backend/src/auth/: bootstrap.py  service.py  services.py
backend/src/core/: bootstrap.py  config.py  database.py  seed_data.json
backend/src/expense/: controllers.py  exceptions.py  models.py  month.py  repositories.py  services.py
backend/src/reminder/: controllers.py  exceptions.py  models.py  sentdm_client.py  services.py
backend/src/shared/: repository.py
backend/static/: index.html
backend/tests/: conftest.py  test_api.py  test_auth.py  test_lambda.py  test_main.py  test_reminder_lambda.py  test_repository.py
backend/tests/auth/: test_bootstrap.py  test_service.py  test_services.py
backend/tests/core/: test_bootstrap.py
backend/tests/expense/: test_controllers.py  test_month.py  test_services.py
backend/tests/reminder/: test_controllers.py  test_sentdm_client.py  test_services.py
backend/tests/shared/: test_repository.py
frontend/: .env.example  .gitignore  Dockerfile  middleware.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
infra/: .gitignore  app.py  cdk.json  package-lock.json  package.json  requirements.txt  tsconfig.json
local/: setup.sh  smoke_test.py
(+35 files in other folders)
