[project]
name = "cashlytics-backend"
version = "0.1.0"
description = "Cashlytics backend API (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "boto3>=1.35",
    "mangum>=0.19",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "moto[dynamodb]>=5.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
package = false
