[project]
name = "cashlytics-backend"
version = "0.1.0"
description = "Cashlytics backend API (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "boto3>=1.35",
    "mangum>=0.19",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "moto[dynamodb,cognitoidp]>=5.0",
    "httpx2>=2.7.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=src --cov=lambda_function --cov-report=term-missing --cov-fail-under=100"
filterwarnings = [
    # mangum (latest, 0.21.0) still calls asyncio.get_event_loop() in its
    # adapter; nothing to fix on our side until upstream does.
    "ignore:There is no current event loop:DeprecationWarning:mangum",
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]

[tool.uv]
package = false
